@@ -149,6 +149,7 @@ Misc:
  - Qt: Detect presence of GL_ARB_framebuffer_object
  - Python: Minor API improvements
  - Qt: Minor memory view tweaks
+ - CMake: Fix libswresample version dependencies (fixes mgba.io/i/1229)
 
 0.7 beta 1: (2018-09-24)
 - Initial beta for 0.7
